--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -46,7 +46,6 @@
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Nhà cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Căn hộ cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Mặt bằng cho thuê</a></li>
-							<li class="item-dropdown"><i class="fa fa-users"></i><a href="#">Ở ghép</a></li>
 							<li class="item-dropdown"><i class="fa fa-life-ring"></i><a href="#">Hướng dẫn</a></li>
 							<li class="item-dropdown"><i class="fa fa-upload"></i><a href="#">Đăng tin</a></li>
 							<li class="item-dropdown"><i class="fa fa-money"></i><a href="#">Nạp tiền</a></li>
@@ -65,7 +64,7 @@
 								</ul>
 							</li>
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
-							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
+							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
 							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
@@ -396,7 +395,7 @@
 		</div>
 	</div>
 	<div class="footer">
-		<img class="top-footer" src="../IMG/footer.png">
+		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content"></div>
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&callback=myMap"></script>
