--- a/Du_anTN/HTML/sign-up.html
+++ b/Du_anTN/HTML/sign-up.html
@@ -52,7 +52,6 @@
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Nhà cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Căn hộ cho thuê</a></li>
 							<li class="item-dropdown"><i class="fa fa-bolt"></i><a href="#">Mặt bằng cho thuê</a></li>
-							<li class="item-dropdown"><i class="fa fa-users"></i><a href="#">Ở ghép</a></li>
 							<li class="item-dropdown"><i class="fa fa-life-ring"></i><a href="#">Hướng dẫn</a></li>
 							<li class="item-dropdown"><i class="fa fa-upload"></i><a href="#">Đăng tin</a></li>
 							<li class="item-dropdown"><i class="fa fa-money"></i><a href="#">Nạp tiền</a></li>
@@ -71,7 +70,7 @@
 								</ul>
 							</li>
 							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
-							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Ở ghép</a></li>
+							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="#"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
 							<li class="item"><a href="#"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
