--- a/Du_anTN/HTML/news.html
+++ b/Du_anTN/HTML/news.html
@@ -62,9 +62,9 @@
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Mặt bằng cho thuê</a></li>
 								</ul>
 							</li>
-							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
-							<li class="item"><a href="#"><i class="fa fa-users"></i></br>Tìm quanh đây</a></li>
-							<li class="item"><a href="#"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
+							<li class="item"><a href="help.html"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
+							<li class="item"><a href="search-nearby.html"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
+							<li class="item"><a href="news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
 							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
@@ -147,7 +147,8 @@
 				</div>		
 			</div>
 			<div class="wrap-content">
-				<div class="content" style="border: none;">
+				<div class="container-content">
+					<div class="content" style="border: none;">
 					<div class="news-content">
 						<div class="image-new">
 							<img src="../IMG/new1.jpg">
@@ -195,8 +196,8 @@
 							<a href="http://ecobus.danang.gov.vn/web/guest/homepublish" target="_blank">http://ecobus.danang.gov.vn</a>
 						</div>
 					</div>
-
-				</div>	
+					</div>	
+				</div>
 			</div>
 		
 			<div class="side-bar">
