--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -232,14 +232,14 @@
 						<div id="content-right">
 							<div class="content-right1">
 								<div class="item-cr1 title">
-									<a data-toggle="collapse" data-target="#content-detail"><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a>
+									<a data-toggle="collapse" data-target="#content-detail"><p>CHO THUÊ CĂN HỘ TẠI SỐ 41B - NGUYỄN ĐÌNH CHIỂU - LÊ ĐẠI HÀNH - QUẬN HAI BÀ TRƯNG</p></a>
 								</div>
 								<div class="item-cr1 summarize-desc">
-									<p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
+									<p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ CĂN HỘ TẠI SỐ 41B - NGUYỄN ĐÌNH CHIỂU - LÊ ĐẠI HÀNH - QUẬN HAI BÀ TRƯNG</p>
 								</div>
-								<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
-								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 local"><p>Khu vực: Quận Hai Bà Trưng, Hà Nội</p></div>
+								<div class="item-cr1 area"><p>Diện tích: 35m²</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 07/05/2017</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
@@ -618,14 +618,14 @@
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&callback=myMap"></script>
 	<script>
-		window.onload = function myMap() {
+		/*window.onload = function myMap() {
 			var mapProp= {
 			    center:new google.maps.LatLng(21.028511, 105.804817),
 			    zoom:16,
 			};
 			var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
 			var marker = new google.maps.Marker({position:mapProp.center});marker.setMap(map);
-		}
+		}*/
 		
 	</script>
 	
