--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -23,25 +23,25 @@
 			</li>
 			<li class="list item2">
 				<div class="list-text room">
-					<img class="img-item" src="../IMG/room.png">
+					<a href="#view"><img class="img-item" src="../IMG/room.png"></a>
 					<p>PHÒNG CHO THUÊ</p>
 				</div>
 			</li>
 			<li class="list item3">
 				<div class="list-text house">
-					<img class="img-item" src="../IMG/house.png">
+					<a href="#view"><img class="img-item" src="../IMG/house.png"></a>
 					<p>NHÀ CHO THUÊ</p>
 				</div>
 			</li>
 			<li class="list item4">
 				<div class="list-text flat">
-					<img class="img-item" src="../IMG/flat.png">
+					<a href="#view"><img class="img-item" src="../IMG/flat.png"></a>
 					<p>CHUNG CƯ</p>
 				</div>
 			</li>
 			<li class="list item5">
 				<div class="list-text store">
-					<img class="img-item" src="../IMG/store.png">
+					<a href="#view"><img class="img-item" src="../IMG/store.png"></a>
 					<p>MẶT BẰNG CỬA HÀNG</p>
 				</div>
 			</li>
@@ -49,7 +49,7 @@
 		</ul>
 	</div>
 	<div class="wrapper-container">
-		<div class="container">
+		<div class="container" id="view">
 			<div class="header">
 				<div class="face">
 					<i class="fa fa-facebook-square">
