--- a/Du_anTN/HTML/help.html
+++ b/Du_anTN/HTML/help.html
@@ -147,8 +147,8 @@
 				</div>		
 			</div>
 			<div class="wrap-content">
-				<!--Tìm quanh đây-->
-				<div class="help-form">
+				<div class="container-content">
+					<div class="help-form">
 					<p style="font-size: 20px; color: #00914E;">Cảm ơn bạn đã đồng hành cùng chúng tôi. Sự hài lòng của bạn là thành công lớn nhất của <i style="font-size: 22px; color: red;">timphongcungban.vn</i></p>
 					<p>Khó khăn:</br>- Bạn đang loay hoay tìm phòng trọ. </br> - Bạn kinh doanh phòng trọ nhưng chưa hiệu quả...</br>
 					Giải pháp:</br>
@@ -169,7 +169,8 @@
 						</div>
 						<button type="submit" class="btn btn-default">Gửi</button>
 					</form>
-				</div>	
+					</div>	
+				</div>
 			</div>
 		
 			<div class="side-bar">
