--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -61,7 +61,7 @@
 					<div class="menu-mobile">
 						<ul>
 							<li class="item-mobile"><i class="fa fa-search"></i><p>Tìm phòng</p></li>
-							<li class="item-mobile"><i class="fa fa-binoculars"></i><p>Giúp tôi</p></li>
+							<li class="item-mobile"><i class="fa fa-binoculars"></i><p>Tìm quanh đây</p></li>
 							<li class="item-mobile"><i class="fa fa-book"></i><p>Quản lý</p></li>
 							<li class="item-mobile"><i class="fa fa-upload"></i><p>Đăng tin</p></li>
 							<li class="item-mobile">
@@ -1101,7 +1101,7 @@
 				</div>
 				<!--Kết thúc phần nội dung-->
 				<div class="side-bar">
-					<div class="search">
+					<div class="search" id="menu-search">
 							<div class="title-side">
 								TÌM PHÒNG
 							</div>
@@ -1174,6 +1174,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="footer">
 		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content"></div>
