--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -61,7 +61,7 @@
 					<div class="menu-mobile">
 						<ul>
 							<li class="item-mobile"><i class="fa fa-search"></i><p>Tìm phòng</p></li>
-							<li class="item-mobile"><i class="fa fa-binoculars"></i><p>Tìm quanh đây</p></li>
+							<li class="item-mobile"><i class="fa fa-map-marker"></i><p>Tìm quanh đây</p></li>
 							<li class="item-mobile"><i class="fa fa-book"></i><p>Quản lý</p></li>
 							<li class="item-mobile"><i class="fa fa-upload"></i><p>Đăng tin</p></li>
 							<li class="item-mobile">
