--- a/Du_anTN/HTML/post2.html
+++ b/Du_anTN/HTML/post2.html
@@ -60,8 +60,8 @@
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Mặt bằng cho thuê</a></li>
 								</ul>
 							</li>
-							<li class="item"><a href="help.html"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
-							<li class="item"><a href="search-nearby" target="_blank"><i class="fa fa-users"></i></br>Tìm quanh đây</a></li>
+							<li class="item"><a href="../HTML/help.html"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
+							<li class="item"><a href="search-nearby" target="_blank"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
 							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
@@ -99,8 +99,8 @@
 							    <!form-row 1>
 								<div class="form-inline">
 								  <div class="form-group">
-								    <label for="email">Loại hình cho thuê</label></br>
-								    <select class="form-control" id="email">
+								    <label for="type">Loại hình cho thuê:</label></br>
+								    <select class="form-control" id="type">
 								    	<option>Chọn loại hình cho thuê</option>
 										<option>Thuê phòng trọ</option>
 										<option>Thuê nhà</option>
@@ -109,42 +109,42 @@
 									</select>
 								  </div>
 								  <div class="form-group">
-								    <label for="pwd">Số điện thoại</label></br>
-								    <input type="text" class="form-control" id="pwd">
+								    <label for="mobile">Số điện thoại:</label></br>
+								    <input type="text" class="form-control" id="mobile">
 								  </div>
 								</div>
 								<!form-row 2>
 								<div class="form-inline">
 								  <div class="form-group">
-								    <label for="email">Giá cho thuê:</label></br>
-								    <input type="text" class="form-control" id="email">
+								    <label for="price">Giá cho thuê:</label></br>
+								    <input type="text" class="form-control" id="price">
 								  </div>
 								  <div class="form-group">
-								    <label for="pwd">Đơn vị:</label></br>
-								    <select class="form-control" id="pwd">
+								    <label for="unit">Đơn vị:</label></br>
+								    <select class="form-control" id="unit">
 										<option>Triệu/tháng</option>
 										<option>Nghìn/tháng</option>
 									</select>
 								  </div>
 								</div>
 								<!form-row 3>
-								<h4>Giá dịch vụ cơ bản</h4>
+								<h4>Giá dịch vụ cơ bản:</h4>
 								<div class="form-inline">
 								  <div class="form-group">
-								    <label for="pwd">Giá điện:</label></br>
-								    <input type="text" class="form-control" id="pwd" placeholder="ex: 3.000đồng/số">
+								    <label for="price-electric">Giá điện:</label></br>
+								    <input type="text" class="form-control" id="price-electric" placeholder="ex: 3.000đồng/số">
 								  </div>
 								   <div class="form-group">
-								    <label for="pwd">Giá nước:</label></br>
-								    <input type="text" class="form-control" id="pwd" placeholder="ex: 15.000đồng/m3, 50.000đồng/tháng">
-								  </div></br>
+								    <label for="price-water">Giá nước:</label></br>
+								    <input type="text" class="form-control" id="price-water" placeholder="ex: 15.000đồng/m3, 50.000đồng/tháng">
+								  </div>
 								   <div class="form-group">
-								    <label for="pwd">Internet:</label></br>
-								    <input type="text" class="form-control" id="pwd" placeholder="ex: 50.000đồng/tháng">
+								    <label for="price-internet">Internet:</label></br>
+								    <input type="text" class="form-control" id="price-internet" placeholder="ex: 50.000đồng/tháng">
 								  </div>
 								  <div class="form-group">
-								    <label for="pwd">Gửi xe:</label></br>
-								    <input type="text" class="form-control" id="pwd" placeholder="ex: Free, 50.000đồng/tháng">
+								    <label for="price-park">Gửi xe:</label></br>
+								    <input type="text" class="form-control" id="price-park" placeholder="ex: Free, 50.000đồng/tháng">
 								  </div>
 								</div>
 							</div>
@@ -155,37 +155,37 @@
 							<div class="group-form-body">
 								<div class="form-inline">
 								  <div class="form-group">
-								    <label for="email">Tỉnh/Thành phố</label></br>
-								    <select class="form-control" id="email">
+								    <label for="province">Tỉnh/Thành phố</label></br>
+								    <select class="form-control" id="province">
 								    	<option>Hà Nội</option>
 										<option>Đà Nẵng</option>
 										<option>Tp.Hồ Chí Minh</option>
 									</select>
 								  </div>
 								  <div class="form-group">
-								    <label for="email">Quận/Huyện</label></br>
-								    <select class="form-control" id="email">
+								    <label for="district">Quận/Huyện</label></br>
+								    <select class="form-control" id="district">
 								    	<option>Quận/Huyện</option>
 								    	<option>Hoàn Kiếm</option>
 										<option>Đống Đa</option>
 										<option>Thanh Xuân</option>
 									</select>
 								  </div>
-								</div>
-								<!--form-row 2-->	
 								  <div class="form-group">
-								    <label for="email">Phường/Xã</label></br>
-								    <select class="form-control" id="email">
+								    <label for="ward">Phường/Xã</label></br>
+								    <select class="form-control" id="ward">
 								    	<option>Phường/Xã</option>
 								    	<option>Nguyễn Đình Chiểu</option>
 										<option>Trần Nhân Tông</option>
 										<option>Hoàng Đạo Thúy</option>
 									</select>
 								  </div>
+								</div>  
 								<div class="form-group"><!--Thông tin vị trí cụ thể-->
-									    <label for="email">Số nhà, Tên đường cụ thể</label></br>
+									    <label for="pac-input">Số nhà, Tên đường cụ thể</label></br>
 									    <input id="pac-input" class="controls" type="text" placeholder="Nhập địa chỉ nhà chi tiết...">
-									    <p style="position: absolute; top: 85px; color: #E74C3C">Vị trí trên bản đồ.</p>
+									    <p style="position: absolute; top: 85px; color:rgba(89, 68, 206, 0.88) ">Vị trí trên bản đồ.</p>
+									    <i style="position: absolute; top: 110px;color: #E74C3C; font-size: 0.8em">Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn, hãy sửa vị trí tin rao của bạn trên bản đồ bằng cách kéo icon <img src="../IMG/position-marker.png" style="width: 20px;height: 25px;"> tới đúng vị trí của tin rao.</i>
 									    <div id="map"></div>
 								</div>
 							</div>
@@ -204,8 +204,9 @@
 						<!--Phần hình ảnh hoặc video-->
 						<div class="group-form">
 								<div class="form-title"><h3>HÌNH ẢNH HOẶC VIDEO VỀ PHÒNG TRỌ.</h3></div>
-								<i>Tin đăng có hình ảnh hoặc video rõ ràng sẽ được xem và gọi gấp nhiều lần so với tin rao không có. Hãy đăng ảnh hoặc video để được giao dịch nhanh chóng!</i>
+								
 								<div class="group-form-body">
+									<i style="color: #044880; font-size: 0.8em">Tin đăng có hình ảnh hoặc video rõ ràng sẽ được xem và gọi gấp nhiều lần so với tin rao không có. Hãy đăng ảnh hoặc video để được giao dịch nhanh chóng!</i>
 									<div class="form-group">
 										<div class="row">
 											<div class="col-sm-12">
@@ -298,7 +299,7 @@
 			
 	</div>
 	<div class="footer">
-		<img class="top-footer" src="../IMG/footer.png">
+		<img class="top-footer" src="../IMG/footer1.png">
 		<div class="footer-content"></div>
 	</div>
 	<!--Script Load file-->
@@ -394,9 +395,10 @@
 	            // Create a marker for each place.
 	            markers.push(new google.maps.Marker({
 	              map: map,
-	              icon: icon,
+	              icon: 'https://congtrinh0209.github.io/Du_anTN/IMG/position-marker.png',
 	              title: place.name,
-	              position: place.geometry.location
+	              position: place.geometry.location,
+	              draggable: true,
 	            }));
 	            if (place.geometry.viewport) {
 	              // Only geocodes have viewport.
