--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -91,7 +91,7 @@
 					</div>
 					<div class="menu-1024">
 						<ul>
-							<li class="item"><a href="#"><i class="fa fa-home"></i></br>Trang chủ</a></li>
+							<li class="item"><a href="../HTML/home.html"><i class="fa fa-home"></i></br>Trang chủ</a></li>
 							<li class="item"><a href="#"><i class="fa fa-user-secret"></i></br>Cho thuê</a>
 								<ul class="sub-menu">
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Phòng cho thuê</a></li>
@@ -108,7 +108,7 @@
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
-								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
+								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span> Đăng nhập</span></button>
 								<!-- Form đăng nhập-->
 							<!-- Modal -->
 							  <div class="modal fade" id="myModal" role="dialog">
@@ -132,7 +132,7 @@
 								            </div>
 							          	</form>
 
-							          <form id="request-pass">   <!--Request-password form-->
+							        	<form id="request-pass">   <!--Request-password form-->
 								          <div class="container form" style="background-color:#f1f1f1">
 								              <div class="psw" id="forgot-pass" data-toggle="collapse" data-target="#u-mobile"><a>Forgot password?</a></div>
 								              <div class="collapse" id="u-mobile">
@@ -145,14 +145,14 @@
 							            </form>
 							        </div>
 							        <div class="modal-footer">
-							          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 							        </div>
 							      </div>
 							      
 							    </div>
 							  </div>
 								<!-- Form đăng ký-->
-								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
+								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil"></i><span> Đăng ký</span></button>
 								<!-- Modal -->
 							  <div class="modal fade" id="myModal2" role="dialog">
 							    <div class="modal-dialog">
