--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -27,7 +27,7 @@
 					<div class="menu-mobile">
 						<ul>
 							<li class="item-mobile"><i class="fa fa-search"></i><p>Tìm phòng</p></li>
-							<li class="item-mobile"><i class="fa fa-binoculars"></i><p>Giúp tôi</p></li>
+							<li class="item-mobile"><i class="fa fa-map-marker"></i><p>Tìm quanh đây</p></li>
 							<li class="item-mobile"><i class="fa fa-book"></i><p>Quản lý</p></li>
 							<li class="item-mobile"><i class="fa fa-upload"></i><p>Đăng tin</p></li>
 							<li class="item-mobile">
@@ -66,7 +66,7 @@
 									<li class="sub-item"><a href=""><i class="fa fa-bolt"></i>Mặt bằng cho thuê</a></li>
 								</ul>
 							</li>
-							<li class="item"><a href="#"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
+							<li class="item"><a href="help.html"><i class="fa fa-binoculars"></i></br>Giúp tôi</a></li>
 							<li class="item"><a href="search-nearby.html" target="_blank"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
@@ -74,7 +74,7 @@
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							<li class="item"><a href="#"><i class="fa fa-money"></i></br>Nạp tiền</a></li>
 							<div class="sign">
-								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span>Đăng nhập</span></button>
+								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"><i class="fa fa-sign-in"></i><span> Đăng nhập</span></button>
 								<!-- Form đăng nhập-->
 							<!-- Modal -->
 							  <div class="modal fade" id="myModal" role="dialog">
@@ -98,7 +98,7 @@
 								            </div>
 							          	</form>
 
-							          <form id="request-pass">   <!--Request-password form-->
+							        	<form id="request-pass">   <!--Request-password form-->
 								          <div class="container form" style="background-color:#f1f1f1">
 								              <div class="psw" id="forgot-pass" data-toggle="collapse" data-target="#u-mobile"><a>Forgot password?</a></div>
 								              <div class="collapse" id="u-mobile">
@@ -111,14 +111,14 @@
 							            </form>
 							        </div>
 							        <div class="modal-footer">
-							          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+										<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 							        </div>
 							      </div>
 							      
 							    </div>
 							  </div>
 								<!-- Form đăng ký-->
-								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil"></i><span>Đăng ký</span></button>
+								<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil"></i><span> Đăng ký</span></button>
 								<!-- Modal -->
 							  <div class="modal fade" id="myModal2" role="dialog">
 							    <div class="modal-dialog">
