--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -75,7 +75,7 @@
 							<li class="item"><a href="search-nearby.html" target="_blank"><i class="fa fa-map-marker"></i></br>Tìm quanh đây</a></li>
 							<li class="item"><a href="../HTML/news.html"><i class="fa fa-newspaper-o"></i></br>Tin tức</a></li>
 							<li class="item"><a href="../HTML/support.html"><i class="fa fa-life-ring"></i></br>Hướng dẫn</a></li>
-							<li class="item"><a><i class="fa fa-upload"></i></br>Đăng tin</a></li>
+							<li class="item"><a href="../HTML/post2.html"><i class="fa fa-upload"></i></br>Đăng tin</a></li>
 							<li class="item"><a href="../HTML/manager.html"><i class="fa fa-book"></i></br>Quản lý</a></li>
 							
 							<div class="sign">
