--- a/Du_anTN/HTML/search-nearby.html
+++ b/Du_anTN/HTML/search-nearby.html
@@ -177,7 +177,7 @@
 			<!--Content1-->
 			<div class="wrap-content">
 				<!--Form thông báo-->
-				<div class="container-content">
+				<div class="container-content" style="margin-top: 10px">
 					<div class="alert alert-danger alert-dismissable fade in" style="display: none">
 						<a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
 						<strong>Bạn cần đăng nhập để sử dụng chức năng này!</strong>
@@ -620,18 +620,6 @@
 		<div class="footer-content"></div>
 	</div>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&callback=myMap"></script>
-	<script>
-		/*window.onload = function myMap() {
-			var mapProp= {
-			    center:new google.maps.LatLng(21.028511, 105.804817),
-			    zoom:16,
-			};
-			var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-			var marker = new google.maps.Marker({position:mapProp.center});marker.setMap(map);
-		}*/
-		
-	</script>
-	
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../JAVASCRIPT/search-nearby.js"></script>
