--- a/Du_anTN/HTML/help.html
+++ b/Du_anTN/HTML/help.html
@@ -174,6 +174,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="icon-nav">
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/help.html">Giúp tôi</a></span>
+			</div>
 			<div class="wrap-content">
 				<div class="container-content" style="margin-top: 10px;">
 					<div class="help-form">
