--- a/Du_anTN/HTML/news.html
+++ b/Du_anTN/HTML/news.html
@@ -173,6 +173,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="icon-nav">
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/news.html">Tin tức</a></span>
+			</div>
 			<div class="wrap-content">
 				<div class="container-content">
 					<div class="content" style="border: none;">
