--- a/Du_anTN/HTML/post2.html
+++ b/Du_anTN/HTML/post2.html
@@ -174,6 +174,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="icon-nav">
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/post2.html">Đăng tin</a></span>
+			</div>
 			<div class="wrap-content" >
 				<div class="container-content" style="margin-top: 20px;">
 					<h3 class="notice">Là người văn minh và tôn trọng người xem, hãy viết nội dung bằng Tiếng Việt có dấu!</h3>
