--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -173,6 +173,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="icon-nav">
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/manager.html">Quản lý</a></span>
+			</div>
 			<div class="wrap-content">
 				<div class="container-content">
 					<div class="wrapper">
