--- a/Du_anTN/HTML/support.html
+++ b/Du_anTN/HTML/support.html
@@ -174,6 +174,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="icon-nav">
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/support.html">Hướng dẫn</a></span>
+			</div>
 			<div class="wrap-content">
 				<div class="container-content">
 					<div class="wrapper">
