--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -1103,15 +1103,10 @@
 									<option>Tỉnh, TP</option>
 									<option>Hà Nội</option>
 									<option>Đà Nẵng</option>
-									<option>TP.HCM</option>
+									<option>TP.Hồ Chí Minh</option>
 								</select>
-								<select class="select">
-									<option>Quận, Huyện</option>
-									<option>Hai Bà Trưng</option>
-									<option>Thanh Xuân</option>
-									<option>Đống Đa</option>
-									<option>Cầu Giấy</option>
-									<option>Từ Liêm</option>
+								<select class="select locale_district">
+									
 								</select>
 								<select class="select">
 									<option>Gần ĐH, CĐ</option>
