--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -220,7 +220,7 @@
 					</div>
 					
 					<!--Content1-->
-					<div class="content">
+					<div class="content" id="content1">
 						<div id="content-left">
 							<div id="myCarousel" class="carousel slide" data-ride="carousel">
 							  <!-- Indicators -->
@@ -275,7 +275,7 @@
 								</div>
 								<div class="item-cr1 local"><p>Khu vực: Quận Thanh Xuân, Hà Nội</p></div>
 								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 19/05/2017</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
@@ -394,7 +394,7 @@
 						<div class="clear"></div>
 					</div>
 					<!--Content 2-->
-					<div class="content">
+					<div class="content" content2>
 						<div id="content-left">
 						
 							<div id="myCarousel3" class="carousel slide" data-ride="carousel">
