--- a/Du_anTN/HTML/post-edit.html
+++ b/Du_anTN/HTML/post-edit.html
@@ -175,7 +175,7 @@
 				</div>
 			</div>
 			<div class="icon-nav">
-				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/post2.html">Đăng tin</a></span>
+				<span><a href="../HTML/home.html">Trang chủ</a> </span><i class="fa fa-angle-right"></i><span> <a href="../HTML/post2.html">Cập nhật tin</a></span>
 			</div>
 			<div class="wrap-content" >
 				<div class="container-content" style="margin-top: 20px;">
@@ -187,15 +187,14 @@
 							<div class="group-form-body">
 								<div class="form-group">
 							      <label for="tieude">Tiêu đề tin:</label>
-							      <input type="email" class="form-control" id="tieude" placeholder="Hãy đặt tiêu đề đầy đủ, ý nghĩa khách hàng sẽ quan tâm hơn">
+							      <input type="email" class="form-control" id="tieude" value="NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 3/108 NGUYỄN TRÃI - THƯỢNG ĐÌNH -THANH XUÂN">
 							    </div>
 							    <!form-row 1>
 								<div class="form-inline">
 								  <div class="form-group">
 								    <label for="type">Loại hình cho thuê:</label></br>
 								    <select class="form-control" id="type">
-								    	<option>Chọn loại hình cho thuê</option>
-										<option>Thuê phòng trọ</option>
+								    	<option>Thuê phòng trọ</option>
 										<option>Thuê nhà</option>
 										<option>Chung cư mini</option>
 										<option>Mặt bằng kinh doanh</option>
@@ -203,14 +202,14 @@
 								  </div>
 								  <div class="form-group">
 								    <label for="mobile">Số điện thoại:</label></br>
-								    <input type="text" class="form-control" id="mobile">
+								    <input type="text" class="form-control" id="mobile" value="0868979193">
 								  </div>
 								</div>
 								<!form-row 2>
 								<div class="form-inline">
 								  <div class="form-group">
 								    <label for="price">Giá cho thuê:</label></br>
-								    <input type="text" class="form-control" id="price">
+								    <input type="text" class="form-control" id="price" value="2,5">
 								  </div>
 								  <div class="form-group">
 								    <label for="unit">Đơn vị:</label></br>
@@ -225,19 +224,19 @@
 								<div class="form-inline">
 								  <div class="form-group">
 								    <label for="price-electric">Giá điện:</label></br>
-								    <input type="text" class="form-control" id="price-electric" placeholder="ex: 3.000đồng/số">
+								    <input type="text" class="form-control" id="price-electric" value="3.500 đồng/số">
 								  </div>
 								   <div class="form-group">
 								    <label for="price-water">Giá nước:</label></br>
-								    <input type="text" class="form-control" id="price-water" placeholder="ex: 15.000đồng/m3, 50.000đồng/tháng">
+								    <input type="text" class="form-control" id="price-water" value="15.000 đồng/m3">
 								  </div>
 								   <div class="form-group">
 								    <label for="price-internet">Internet:</label></br>
-								    <input type="text" class="form-control" id="price-internet" placeholder="ex: 50.000đồng/tháng">
+								    <input type="text" class="form-control" id="price-internet" value="60.000 đồng/tháng">
 								  </div>
 								  <div class="form-group">
 								    <label for="price-park">Gửi xe:</label></br>
-								    <input type="text" class="form-control" id="price-park" placeholder="ex: Free, 50.000đồng/tháng">
+								    <input type="text" class="form-control" id="price-park" value="50.000 đồng/tháng">
 								  </div>
 								</div>
 							</div>
@@ -258,17 +257,15 @@
 								  <div class="form-group">
 								    <label for="district">Quận/Huyện</label></br>
 								    <select class="form-control" id="district">
-								    	<option>Quận/Huyện</option>
-								    	<option>Hoàn Kiếm</option>
+								    	<option>Thanh Xuân</option>
 										<option>Đống Đa</option>
-										<option>Thanh Xuân</option>
+										<option>Hoàn Kiếm</option>
 									</select>
 								  </div>
 								  <div class="form-group">
 								    <label for="ward">Phường/Xã</label></br>
 								    <select class="form-control" id="ward">
-								    	<option>Phường/Xã</option>
-								    	<option>Nguyễn Đình Chiểu</option>
+								    	<option>Thượng Đình</option>
 										<option>Trần Nhân Tông</option>
 										<option>Hoàng Đạo Thúy</option>
 									</select>
@@ -276,7 +273,7 @@
 								</div>  
 								<div class="form-group"><!--Thông tin vị trí cụ thể-->
 									    <label for="pac-input">Số nhà, Tên đường cụ thể</label></br>
-									    <input id="pac-input" class="controls" type="text" placeholder="Nhập địa chỉ nhà chi tiết...">
+									    <input id="pac-input" class="controls" type="text" value="3/108 NGUYỄN TRÃI - THƯỢNG ĐÌNH -THANH XUÂN">
 									    <p style="position: absolute; top: 85px; color:rgba(89, 68, 206, 0.88) ">Vị trí trên bản đồ.</p>
 									    <i style="position: absolute; top: 110px;color: #E74C3C; font-size: 0.8em">Để tăng độ tin cậy và tin rao được nhiều người quan tâm hơn, hãy sửa vị trí tin rao của bạn trên bản đồ bằng cách kéo icon <img src="../IMG/position-marker.png" style="width: 20px;height: 25px;"> tới đúng vị trí của tin rao.</i>
 									    <div id="map"></div>
@@ -290,7 +287,7 @@
 							<div class="group-form-body">
 								<div class="form-group">
 								  <label for="comment">Giới thiệu mô tả về tin đăng của bạn. Ví dụ: Khu nhà có vị trí thuận lợi: Gần trường học, gần trạm xe buýt ...Tổng diện tích 52m2, đường đi ô tô vào tận cửa...</label>
-								  <textarea class="form-control" rows="5" id="comment"></textarea>
+								  <textarea class="form-control" rows="5" id="comment" >Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 3/108 Nguyễn Trãi, Thượng Đình, Thanh Xuân, Hà Nội cách nhà nghỉ Thanh Trà 2: 10m. Gần Đại học Khoa học tự nhiên, Royal City</textarea>
 								</div>
 							</div>
 						</div>
@@ -313,7 +310,7 @@
 						</div>
 					<div class="wrapper form-step step2">	
 					</div>
-					<button type="submit" class="btn-sub">Đăng tin ngay</button>	
+					<button type="submit" class="btn-sub">Cập nhật ngay</button>	
 					</form>
 				</div>
 			</div>
