--- a/Du_anTN/HTML/manager.html
+++ b/Du_anTN/HTML/manager.html
@@ -211,8 +211,8 @@
 											<td class="td_col4 date-dead item1" style="color: #ED2327"></td>
 											<td>
 												<a class="btn btn_action" href="../HTML/post-edit.html"><i class="fa fa-pencil"></i> Sửa</a>
-												<a class="btn btn_action" id="st1" style="color: #ED2327"><i class="fa fa-expeditedssl" ></i> Ngừng đăng tin</a>
-												<a class="btn btn_action" id="st2" style="color: #4CAF50"><i class="fa fa-refresh"></i> Đăng lại</a>
+												<a class="btn btn_action" id="st1"><i class="fa fa-expeditedssl" ></i> Ngừng đăng tin</a>
+												<a class="btn btn_action" id="st2"><i class="fa fa-refresh"></i> Đăng lại</a>
 											</td>
 										</tr>
 										<tr>
@@ -225,8 +225,8 @@
 											<td class="td_col4 date-dead item2" style="color: #ED2327"></td>
 											<td>
 												<a class="btn btn_action" href="../HTML/post-edit.html"><i class="fa fa-pencil"></i> Sửa</a>
-												<a class="btn btn_action" id="st1-2" style="color: #ED2327"><i class="fa fa-expeditedssl" ></i> Ngừng đăng tin</a>
-												<a class="btn btn_action" id="st2-2" style="color: #4CAF50"><i class="fa fa-refresh"></i> Đăng lại</a>
+												<a class="btn btn_action" id="st1-2"><i class="fa fa-expeditedssl" ></i> Ngừng đăng tin</a>
+												<a class="btn btn_action" id="st2-2"><i class="fa fa-refresh"></i> Đăng lại</a>
 											</td>
 										</tr>
 									</tbody>
