--- a/Du_anTN/HTML/home.html
+++ b/Du_anTN/HTML/home.html
@@ -383,9 +383,13 @@
 												</div>
 											</div>
 										</div>
-									    <div id="menu4" class="tab-pane fade">
+									    <div id="menu4" class="tab-pane fade" style="position: relative;">
 										    <div id="detail-item4" class="des-detail-content">
 												<div id="googleMap1" style="width:100%;height:400px;"></div>
+												<div id="right-panel">
+												  <h2>CĐ, ĐH gần nhất</h2>
+												  <ul id="places"></ul>
+												</div>
 											</div>
 									    </div>
 									</div>	    
@@ -409,17 +413,17 @@
 							    <!-- Wrapper for slides -->
 							    <div class="carousel-inner" role="listbox">
 							      <div class="item active">
-							        <img src="../IMG/img-p2/1.jpg" alt="anh1" width="460" height="345">
+							        <img src="../IMG/img-p3/1.jpg" alt="anh1" width="460" height="345">
 							      </div>
 
 							      <div class="item">
-							        <img src="../IMG/img-p2/2.jpg" alt="anh2" width="460" height="345">
+							        <img src="../IMG/img-p3/2.jpg" alt="anh2" width="460" height="345">
 							      </div>
 							      <div class="item">
-							        <img src="../IMG/img-p2/3.jpg" alt="anh3" width="460" height="345">
+							        <img src="../IMG/img-p3/3.jpg" alt="anh3" width="460" height="345">
 							      </div>
 									<div class="item">
-								        <img src="../IMG/img-p2/4.jpg" alt="anh3" width="460" height="345">
+								        <img src="../IMG/img-p3/4.jpg" alt="anh3" width="460" height="345">
 								    </div>  
 							    </div>
 
@@ -443,27 +447,27 @@
 						<div id="content-right">
 							<div class="content-right1">
 								<div class="item-cr1 title">
-									<a data-toggle="collapse" data-target="#content-detail2"><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ PHÒNG TRỌ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a>
+									<a data-toggle="collapse" data-target="#content-detail2"><p>NHÀ TÔI CHÍNH CHỦ CHO THUÊ CĂN HỘ TẠI SỐ 131A, NGÕ 105/20 ĐƯỜNG DOÃN KẾ THIỆN, MAI DỊCH, QUẬN CẦU GIẤY</p></a>
 								</div>
 								<div class="item-cr1 summarize-desc">
-									<p>Nhà tôi chính chủ còn 1 phòng trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
+									<p>Nhà tôi chính chủ có căn hộ trống cần cho thuê gấp vào ở được ngay, tại địa chỉ số 131A ngõ 105/20 đường Doãn Kế Thiện, Mai Dịch, cách nhà nghỉ Thanh Trà 2: 10m.</p>
 								</div>
 								<div class="item-cr1 local"><p>Khu vực: Huyện Từ Liêm, Hà Nội</p></div>
 								<div class="item-cr1 area"><p>Diện tích: 45m²</p></div>
-								<div class="item-cr1 date"><p>Ngày đăng: 20/08/2016</p></div>
+								<div class="item-cr1 date"><p>Ngày đăng: 20/05/2017</p></div>
 							</div>
 							<div class="content-right2">
 								<div class="price-service">
 									<p>Giá dịch vụ:</p>
 									<div class="item-cr1 water-price"><i class="fa fa-shower"></i> Nước: <span>25.000/m3</span></div>
-									<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Điện: <span>3.500/số</span></div>
-									<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>50.000/tháng</span></div>
-									<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>Free</span></div>
+									<div class="item-cr1 electric-price"><i class="fa fa-bolt"></i> Điện: <span>3.000/số</span></div>
+									<div class="item-cr1 internet-price"><i class="fa fa-wifi"></i> Mạng: <span>100.000/tháng</span></div>
+									<div class="item-cr1 park-price"><i class="fa fa-motorcycle"></i> Gửi xe: <span>100.000/tháng</span></div>
 									<div class="item-cr1 line"></div>
-									<div class="item-cr1">Ư.tính: 250.000đ/ng/tháng</div>
+									<div class="item-cr1">Ư.tính: 450.000đ/ng/tháng</div>
 								</div>
-								<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 1.5tr/tháng</span></div>
-								<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0988870225</span></div>
+								<div class="item-cr1 price"><i class="fa fa-money"></i><span> Phòng: 3.5tr/tháng</span></div>
+								<div class="item-cr1 phone"><i class="fa fa-phone"></i><span> LH: 0966870225</span></div>
 								<button type="text" class="button-detail" data-toggle="collapse" data-target="#content-detail2"><i class="fa fa-arrow-right"></i> Xem chi tiết</button>
 							</div>
 							<div class="clear"></div>
@@ -477,7 +481,7 @@
 									    <li class="active"><a data-toggle="tab" href="#menu2_1">THÔNG TIN CHUNG</a></li>
 									    <li><a data-toggle="tab" href="#menu2_2">MÔ TẢ CHI TIẾT</a></li>
 									    <li><a data-toggle="tab" href="#menu2_3">HÌNH ẢNH</a></li>
-									    <li><a data-toggle="tab" href="#menu2_4">VỊ TRÍ</a></li>
+									    <li class="position item2"><a data-toggle="tab" href="#menu2_4">VỊ TRÍ</a></li>
 									</ul>
 								<!-- Content navs tabs-->
 									<div class="tab-content">
@@ -536,16 +540,16 @@
 												    <!-- Wrapper for slides -->
 												    <div class="carousel-inner" role="listbox">
 												      <div class="item active">
-												        <img src="../IMG/img-p2/1.jpg" alt="anh1" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p3/1.jpg" alt="anh1" width="100%" style="height: 400px !important">
 												      </div>
 												      <div class="item">
-												        <img src="../IMG/img-p2/2.jpg" alt="anh2" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p3/2.jpg" alt="anh2" width="100%" style="height: 400px !important">
 												      </div>
 												      <div class="item">
-												        <img src="../IMG/img-p2/3.jpg" alt="anh3" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p3/3.jpg" alt="anh3" width="100%" style="height: 400px !important">
 												      </div>
 														<div class="item">
-													        <img src="../IMG/img-p2/4.jpg" alt="anh4" width="100%" style="height: 400px !important">
+													        <img src="../IMG/img-p3/4.jpg" alt="anh4" width="100%" style="height: 400px !important">
 													    </div>
 												    </div>
 											   		 <!-- Left and right controls -->
@@ -560,9 +564,13 @@
 												</div>
 											</div>
 										</div>
-									    <div id="menu2_4" class="tab-pane fade">
+									    <div id="menu2_4" class="tab-pane fade" style="position: relative">
 										    <div id="detail-item4" class="des-detail-content">
 												<div id="googleMap2" style="width:100%;height:400px;"></div>
+												<div id="right-panel2">
+												  <h2>CĐ, ĐH gần nhất</h2>
+												  <ul id="places2"></ul>
+												</div>
 											</div>
 									    </div>
 									</div>	    
@@ -586,17 +594,17 @@
 							    <!-- Wrapper for slides -->
 							    <div class="carousel-inner" role="listbox">
 							      <div class="item active">
-							        <img src="../IMG/img-p3/1.jpg" alt="anh1" width="460" height="345">
+							        <img src="../IMG/img-p2/1.jpg" alt="anh1" width="460" height="345">
 							      </div>
 
 							      <div class="item">
-							        <img src="../IMG/img-p3/2.jpg" alt="anh2" width="460" height="345">
+							        <img src="../IMG/img-p2/2.jpg" alt="anh2" width="460" height="345">
 							      </div>
 							      <div class="item">
-							        <img src="../IMG/img-p3/3.jpg" alt="anh3" width="460" height="345">
+							        <img src="../IMG/img-p2/3.jpg" alt="anh3" width="460" height="345">
 							      </div>
 									<div class="item">
-								        <img src="../IMG/img-p3/4.jpg" alt="anh3" width="460" height="345">
+								        <img src="../IMG/img-p2/4.jpg" alt="anh3" width="460" height="345">
 								    </div>  
 							    </div>
 
@@ -713,16 +721,16 @@
 												    <!-- Wrapper for slides -->
 												    <div class="carousel-inner" role="listbox">
 												      <div class="item active">
-												        <img src="../IMG/img-p3/1.jpg" alt="anh1" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p2/1.jpg" alt="anh1" width="100%" style="height: 400px !important">
 												      </div>
 												      <div class="item">
-												        <img src="../IMG/img-p3/2.jpg" alt="anh2" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p2/2.jpg" alt="anh2" width="100%" style="height: 400px !important">
 												      </div>
 												      <div class="item">
-												        <img src="../IMG/img-p3/3.jpg" alt="anh3" width="100%" style="height: 400px !important">
+												        <img src="../IMG/img-p2/3.jpg" alt="anh3" width="100%" style="height: 400px !important">
 												      </div>
 														<div class="item">
-													        <img src="../IMG/img-p3/4.jpg" alt="anh4" width="100%" style="height: 400px !important">
+													        <img src="../IMG/img-p2/4.jpg" alt="anh4" width="100%" style="height: 400px !important">
 													    </div>
 												    </div>
 											   		 <!-- Left and right controls -->
@@ -1180,100 +1188,7 @@
 		<div class="footer-content"></div>
 	</div>
 	<script src="../JAVASCRIPT/jquery-3.2.0.min.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4"></script>	
-	<script>
-	$(".position.item1").on("click",function(){
-    	var mapholder = document.getElementById('googleMap1');
-        if (navigator.geolocation)
-     	   {
-            	navigator.geolocation.getCurrentPosition(showPosition, showError);
-        	} 
-        	else { 
-            	mapholder.innerHTML = "Geolocation không hỗ trợ trên trình duyệt này."
-        	};
-    	function showPosition(position) {
-        	lat = position.coords.latitude;
-        	lon = position.coords.longitude;
-        	latlon = new google.maps.LatLng(lat, lon);
-        	var myOptions = {
-           		center: {lat: 20.999145, lng: 105.814108},
-            	zoom:16,
-            	mapTypeId:google.maps.MapTypeId.ROADMAP,
-            	mapTypeControl:true,
-        	}
-       		mapholder.style.height = '400px';
-        	mapholder.style.width = '100%';
-        	var map = new google.maps.Map(mapholder, myOptions);
-        	var marker = new google.maps.Marker({
-            	position:latlon,
-            	map:map,
-            	title:"Vị trí của bạn!",
-            	icon: 'https://congtrinh0209.github.io/Du_anTN/IMG/position-marker.png',
-            	draggable: false,
-        	});
-        	var marker = new google.maps.Marker({
-                position: {lat: 20.999145, lng: 105.814108},
-                icon: 'https://congtrinh0209.github.io/Du_anTN/IMG/house-marker.png',
-                map: map,
-                title: "Chỉ đường tới đây",
-                draggable: false,
-       		});
-        	var myCity = new google.maps.Circle({
-            	center: {lat: 20.999145, lng: 105.814108},
-            	radius: 60,
-            	strokeColor: "#E74C3C",
-            	strokeOpacity: 0.5,
-            	strokeWeight: 2,
-            	fillColor: "#E74C3C",
-            	fillOpacity: 0.3
-        	});
-        	myCity.setMap(map);
-        	marker.addListener('click', function() {
-             /***********Chỉ đường*************/
-            	directionsService = new google.maps.DirectionsService;
-            	directionsDisplay = new google.maps.DirectionsRenderer({
-                map: map
-            	});
-                            // get route from A to B
-            	calculateAndDisplayRoute(directionsService, directionsDisplay);
-            	function calculateAndDisplayRoute(directionsService, directionsDisplay){
-                    directionsService.route({
-                        origin: latlon,
-          				destination: {lat: 20.999145, lng: 105.814108},
-                        avoidTolls: true,
-                        avoidHighways: false,
-                        travelMode: google.maps.TravelMode.DRIVING
-                        },
-                        function (response, status) {
-                            if (status == google.maps.DirectionsStatus.OK) {
-                                directionsDisplay.setDirections(response);
-                            } else {
-                                window.alert('Directions request failed due to ' + status);
-                            }
-                    });
-                }
-        	});   
-    	};
-   		function showError(error) {
-        	switch(error.code) {
-            	case error.PERMISSION_DENIED:
-                mapholder.innerHTML = "User denied the request for Geolocation."
-                	break;
-            	case error.POSITION_UNAVAILABLE:
-                mapholder.innerHTML = "Location information is unavailable."
-                	break;
-            	case error.TIMEOUT:
-                mapholder.innerHTML = "The request to get user location timed out."
-                	break;
-            	case error.UNKNOWN_ERROR:
-                mapholder.innerHTML = "An unknown error occurred."
-                	break;
-        	}
-    	}
-	});
-	    </script>
-    	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4"></script>
-	</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCDUYFDaXnS0a217T0rP3xNrnqxuErZsD4&language=vi&region=vie&libraries=places"></script>	
 	<script src="../JAVASCRIPT/home.js"></script>
 	<script src="../../bootstrap/js/bootstrap.min.js"></script>
 </body>
